--- a/OneDrive/Documents/recipebook-Villorente-Andrew/templates/registration/login.html
+++ b/OneDrive/Documents/recipebook-Villorente-Andrew/templates/registration/login.html
@@ -10,5 +10,7 @@
 		{{ form.as_p }}
 		<button type="submit">Log In</button>
 	</form>
+	<h2></h2>
+	<a href="{% url 'password_reset' %}">Forgot your password?</a>
 	<br>
 {% endblock content %}
